@@ -1,16 +1,18 @@
 Build.PL
 Changes
+MANIFEST			This list of files
+META.json
+META.yml
+Makefile.PL
+README
 inc/Test/Run/Builder.pm
 lib/HTML/Widgets/NavMenu/ToJSON.pm
 lib/HTML/Widgets/NavMenu/ToJSON/Data_Persistence.pm
 lib/HTML/Widgets/NavMenu/ToJSON/Data_Persistence/YAML.pm
-MANIFEST			This list of files
-README
 t/00-load.t
+t/cpan-changes.t
 t/manifest.t
+t/output.t
 t/pod-coverage.t
 t/pod.t
-t/output.t
-Makefile.PL
-META.yml
-META.json
+t/style-trailing-space.t
