@@ -2,6 +2,7 @@ Revision history for HTML-Widgets-NavMenu-ToJSON
 
 0.0.2   2014-01-31
         - Add minimum version of perl to Build.PL/META.yml.
+        - Add t/cpan-changes.t and t/style-trailing-space.t .
 
 0.0.1   2012-12-24
         First version, released on an unsuspecting world.
